# Falcor

./: CMakeLists.txt  ReadMe.txt
Source/Falcor/: CMakeLists.txt
Source/Falcor/Rendering/Lights/: EnvMapSampler.slang
Source/Falcor/Scene/Displacement/: DisplacementMapping.slang
Source/Falcor/Utils/Math/: MathHelpers.slang
Source/Falcor/Utils/Neural/: ActivationFunc.slang  IOHelper.cpp  IOHelper.h  MLP.cpp  MLP.h  MLP.slang  MLPCuda.cpp  MLPCuda.h  NBTF.cpp  NBTF.h  NBTF.slang
Source/Mogwai/: MogwaiSettings.cpp
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/AccumulateSTPass/: AccumulateSTPass.cpp  AccumulateSTPass.h  CMakeLists.txt
Source/RenderPasses/HFTracing/: BTFUtils.slang  CMakeLists.txt  CountValidPixels.cs.slang  CreateMaxMip.cs.slang  Display.cs.slang  GenerateGeometryMap.cs.slang  HFTracing.cpp  HFTracing.h  Inference.cs.slang  MinimalPathTracer.rt.slang  VisualizeMaps.cs.slang
Source/RenderPasses/HFTracing/EditNoBlend/: Display.cs.slang  HFTracing.cpp  HFTracing.h  MinimalPathTracer.rt.slang
Source/RenderPasses/HFTracing/EditWithBlendTest/: CreateMaxMip.cs.slang  Display.cs.slang  HFTracing.cpp  HFTracing.h  Inference.cs.slang  MinimalPathTracer.rt.slang
Source/RenderPasses/HFTracing/ForShell/: BTFSynthesis.slang  HFTracing.cpp  HFTracing.h  MinimalPathTracer.rt.slang
Source/RenderPasses/HFTracing/NvrtcUtils/: CommonNvrtc.hpp
Source/RenderPasses/HFTracing/OnlyEdit/: HFTracing.cpp  HFTracing.h  MinimalPathTracer.rt.slang
Source/RenderPasses/HFTracing/OnlyPrism/: CreateMaxMip.cs.slang  MinimalPathTracer.rt.slang
Source/RenderPasses/HFTracing/PrimaryPrism/: Display.cs.slang  HFTracing.cpp  HFTracing.h  MinimalPathTracer.rt.slang
Source/RenderPasses/HFTracing/Tools/: CommonNvrtc.hpp  Utils.cpp  Utils.h  Utils.slang
Source/RenderPasses/HFTracing/Tracing/: MyIntersection.slang
Source/RenderPasses/HFTracing/cuda/: MLPInference.cu  MLPInference.h  build.bat  cublasdxTest.cu  cublasdxTest.h  cudaUtils.h
Source/RenderPasses/ToneMapper/: ToneMapper.cpp  ToneMapper.h
Source/Samples/: CMakeLists.txt
Source/Samples/ShaderToy/: CMakeLists.txt  InferDebug.cs.slang  ShaderToy.cpp  ShaderToy.h  Toy.ps.slang  bindInput.cs.slang  bindInput.ps.slang  display.ps.slang
Source/Samples/ShaderToy/cuda/: MLPInference.cu  MLPInference.h  cudaTextureHelper.cpp  cudaUtils.h
Source/Samples/SynthesisSample/: CMakeLists.txt  SynthesisSample.cpp  SynthesisSample.h
scripts/: HFTracingEdit.py  HFTracingVideo.py
(+16 files in other folders)
